[gd_scene load_steps=3 format=3 uid="uid://bw6jr4thi22wr"]

[ext_resource type="Script" uid="uid://cqvrlw5lmodb2" path="res://Scripts/weapon_component.gd" id="1_tmeff"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tmeff"]

[node name="WeaponComponent" type="Node2D"]
script = ExtResource("1_tmeff")

[node name="AttackHitbox" type="Area2D" parent="."]
collision_layer = 10
collision_mask = 69

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(8.25, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tmeff")

[connection signal="area_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_area_entered"]
